--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -24,4 +24,5 @@ body {
   background:$background-color;
   margin: 0;
   padding:0;
+  overflow-x: hidden;
 }
